# Triangle

./: .gitignore  CMakeLists.txt  triangle
.cache/clangd/index/: Application.cpp.0342330434A7EB5B.idx  Application.h.363FBC1BFFA455D9.idx  ValidationLayers.cpp.843241CEBA7B0912.idx  ValidationLayers.h.045D3B52DDCCCA66.idx  VulkanDevice.cpp.2DF410988C4EADF8.idx  VulkanDevice.h.295976AF9ACA812E.idx  Window.cpp.A42CAF40036B6308.idx  Window.h.CB65B1FD41E1151D.idx  main.cpp.37EFF386180C76ED.idx
ai/: README.md  apply_patches.sh
ai/src/: Application.h  ValidationLayers.cpp  VulkanDevice.h  Window.cpp
build-debug/: VulkanTriangle
build-release/: VulkanTriangle  compile_commands.json
shaders/: shader.frag
src/: Application.cpp  Application.h  ValidationLayers.cpp  ValidationLayers.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeLine.cpp  VulkanPipeLine.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanSwapChain.h  Window.cpp  Window.h  main.cpp
